--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,348 @@
-/* место для вашего кода */
+main {
+  display: flex;
+  flex-direction: column;
+  gap: 179px;
+}
+
+.header {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  width: 1052px;
+  height: 105px;
+  margin: 92px 24px 0px 24px;
+}
+
+.header__links-list {
+  display: flex;
+  gap: 24px;
+  margin: 44px 36px 39px 26.52px;
+}
+
+.header__links-list-item {
+  list-style: circle;
+}
+
+.header__links-list-item_no-bullit {
+  list-style: none;
+}
+
+.header__link {
+  font-size: 18px;
+  white-space: nowrap;
+}
+
+.text-link:hover {
+  background-color: black;
+  color: white;
+}
+
+.header__link_active {
+  text-decoration: none;
+}
+
+.header__logo {
+  display: block;
+  width: 140px;
+  height: 148px;
+  margin: 0px;
+}
+
+.header__logo-image {
+  width: 100%;
+}
+
+.header__address {
+  justify-self: end;
+  font-style: inherit;
+  justify-self: center;
+  width: 240.52px;
+  height: 98px;
+  margin: 5px 25.48px 2px 0px;
+}
+
+.address__item {
+  display: block;
+  font-size: 18px;
+  text-underline-position: under;
+  
+}
+
+.address__address-text {
+  font-size: 18px;
+}
+
+.cover {
+  position: relative;
+  width: 1100px;
+  height: 757px;
+  margin-top: 96px;
+  background-image: url(/ono-tebe-nado/images/cover.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  
+}
+.overlay {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  opacity: 60%;
+} 
+
+.cover__title {
+  position: relative;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  color: white;
+  font-size: 100px;
+  font-weight: bold;
+  letter-spacing: 30px;
+  text-transform: uppercase;
+  padding: 176px 50px 0px 50px;
+}
+
+.align-text {
+display: block;
+text-align: center;
+
+}
+
+ .aligned-text_center {
+  text-align: center;
+ }
+
+ .aligned-text_right {
+  text-align: right;
+ }
+  .letter-spacing-extended {
+    letter-spacing: 60px;
+  }
+
+  .remove-spacing {
+    letter-spacing: normal;
+  }
+  
+  .cover__description {
+    position: relative;
+    z-index: 1;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+
+  }
+
+  .cover__description-text{
+    font-size: 22px;
+    text-transform: uppercase;
+    word-spacing: 18px;
+    color: white;
+    margin: 136px 0px 62px 78px;
+  }
+
+  .button {
+    border: 1px white solid;
+    font-family: 'Raleway', sans-serif;
+    width: 256px;
+    height: 51px;
+    font-weight: normal;
+    font-size: 22px;
+    text-transform: uppercase;
+    background-color: transparent;
+    color: white;
+    margin: 124px 50px 51px 79px;
+  
+  }
+
+  .lots {
+    width: 1052px;
+    height: 692px;
+    margin: 0px 24px 0px;
+  }
+
+  .lots__heading {
+    margin: 0px 891px 27px 40px;
+    font-weight: bold;
+    font-size: 40px;
+    line-height: 1;
+    text-transform: uppercase;
+  }
+
+  .lots__card-list {
+    list-style: none;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 25px;
+  }
+
+  .lots__card-list-item {
+    width: 334px;
+    height: 563px;
+  }
+
+  .card-link {
+    display: block;
+    height: 100%;
+  }
+
+  .card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 334px;  
+    height: 563px; 
+  }
+
+  .card_type_film {
+    background-image: url(/ono-tebe-nado/images/card-lot-01.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+  .card_type_book {
+    background-image: url(/ono-tebe-nado/images/card-lot-02.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+
+  .card_type_picture {
+    background-image: url(/ono-tebe-nado/images/card-lot-03.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+
+  }
+  
+  
+  .card__title {
+    position: relative;
+    z-index: 1;
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: underline;
+    text-transform: uppercase;
+    margin:51px 40px 0px 40px;
+    color: white;
+   }
+
+   .card__text {
+    position: relative;
+    text-decoration: none;
+    z-index: 1;
+    font-size: 20px;
+    margin: 0px 40px 48px 40px;
+    color:white;
+   }
+
+   .lots__look-more-link {
+    display: block;
+    margin: 30px 820px 2px 40px;
+    font-size: 20px;
+    text-decoration-line: underline;
+    text-underline-position: under;
+    width: fit-content;
+  }
+  
+  .about {
+    display: grid;
+    grid-template-columns: 334px 1fr;
+    width: 1052px;
+    height: 595px;
+    margin-left: 24px;
+    margin-right: 24px;
+  }
+  
+  .about__column {
+    width: 693px;
+    height: 449px;
+  
+  }
+  
+  .about__column_text {
+    grid-column: 2;
+  }
+  
+  .about__logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 240px;
+    height: 240px;
+    border-radius: 50%;
+    background-color: black;
+    margin: 35px 72px 320px 47px;
+  }
+  
+  .about__logo-image {
+    width: 141px;
+    height: 112px;
+  }
+  /*блок заголовка и текста*/
+  .about__title {
+    margin-top: 133px;
+    font-weight: bold;
+    font-size: 40px;
+    line-height: 1;
+    text-transform: uppercase;
+    margin-left: 25px;
+  }
+  
+  .about__text {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    font-size: 20px;
+    line-height: normal;
+    margin-top: 100px;
+    margin-left: 25px;
+   
+  }
+  
+  .footer__menu-section { 
+    width: 1000px; 
+    height: 98px; 
+    margin: 133px 50px 50px 88px;
+ 
+     
+   } 
+ 
+  .footer__menu-list { 
+    display: flex; 
+    flex-direction: column; 
+    align-items: center; 
+    text-underline-position: under; 
+    list-style: none; 
+    margin-right: -20px; 
+    margin-top: -100px; 
+    
+} 
+     
+  .footer__social-list { 
+    display: flex;  
+    justify-content: end; 
+    align-items: center; 
+    gap: 48px; 
+    margin: -50px -90px;
+    
+}    
+ 
+  .footer__logo-image { 
+    width: 48px; 
+ 
+} 
+  .footer__social-vk { 
+    width: 48px; 
+ 
+} 
+ 
+  .footer__logo-yt { 
+    width: 48px; 
+} 
+ 
+  
