--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,7 @@ main {
   grid-template-columns: 1fr 1fr 1fr;
   width: 1052px;
   height: 105px;
-  margin: 92px 24px 0px 24px;
+  margin: 92px 24px 96px 24px;
 }
 
 .header__links-list {
@@ -44,7 +44,8 @@ main {
   display: block;
   width: 140px;
   height: 148px;
-  margin: 0px;
+  
+  
 }
 
 .header__logo-image {
@@ -74,7 +75,7 @@ main {
   position: relative;
   width: 1100px;
   height: 757px;
-  margin-top: 96px;
+  
   background-image: url(/ono-tebe-nado/images/cover.jpg);
   background-position: center;
   background-size: cover;
@@ -157,6 +158,7 @@ main {
   width: 1052px;
   height: 692px;
   margin: 0px 24px 0px 24px;
+  padding-top: 3px;
 }
 
 .lots__heading {
@@ -312,6 +314,7 @@ main {
 }
 
 .footer__social-list {
+  grid-column: 3;
   display: flex;
   gap: 48px;
 
