--- a/styles/style.css
+++ b/styles/style.css
@@ -80,7 +80,7 @@ main {
   position: relative;
   width: 1100px;
   height: 757px;
-  
+  margin-bottom: 179px;
   background-image: url(/ono-tebe-nado/images/cover.jpg);
   background-position: center;
   background-size: cover;
