--- a/styles/style.css
+++ b/styles/style.css
@@ -19,10 +19,12 @@ main {
 
 .header__links-list-item {
   list-style: circle;
+  line-height: 1.35;
 }
 
 .header__links-list-item_no-bullit {
   list-style: none;
+  line-height: 1.35;
 }
 
 .header__link {
@@ -107,6 +109,7 @@ main {
   letter-spacing: 30px;
   text-transform: uppercase;
   padding: 165px 50px 0px 50px;
+  line-height: 1.15;
 }
 
 .align-text {
@@ -281,8 +284,7 @@ main {
 }
 /*блок заголовка и текста*/
 .about__title {
-  margin-top: 133px;
-  padding-left: 5px;
+  margin: 133px 0px 13px 0px;
   font-weight: bold;
   font-size: 40px;
   line-height: 1;
@@ -296,7 +298,6 @@ main {
   font-size: 20px;
   line-height: normal;
   margin-top: 100px;
-  padding-left: 5px;
 }
 
 .footer__menu-section {
