--- a/styles/style.css
+++ b/styles/style.css
@@ -81,7 +81,7 @@ main {
   position: relative;
   width: 1100px;
   height: 757px;
-  background-image: url(/ono-tebe-nado/images/cover.jpg);
+  background-image: url(../images/cover.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -189,7 +189,7 @@ main {
   width: 334px;
   height: 563px;
   margin-top: 27px;
-  margin-bottom: 55px;
+  margin-bottom: 30px;
 }
 
 .card-link {
@@ -207,20 +207,20 @@ main {
 }
 
 .card_type_film {
-  background-image: url(/ono-tebe-nado/images/card-lot-01.jpg);
+  background-image: url(../images/card-lot-01.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
 .card_type_book {
-  background-image: url(/ono-tebe-nado/images/card-lot-02.jpg);
+  background-image: url(../images/card-lot-02.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
 
 .card_type_picture {
-  background-image: url(/ono-tebe-nado/images/card-lot-03.jpg);
+  background-image: url(../images/card-lot-03.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -249,7 +249,7 @@ main {
 
 .lots__look-more-link {
   display: block;
-  margin: 30px 820px 2px 40px;
+  margin: 0px 820px 2px 40px;
   font-size: 20px;
   text-decoration-line: underline;
   text-underline-position: under;
