--- a/styles/style.css
+++ b/styles/style.css
@@ -51,6 +51,7 @@ main {
   display: block;
   width: 140px;
   height: 148px;
+  margin-left: 36px;
   margin-right: 184px;
 }
 
@@ -71,10 +72,12 @@ main {
   display: block;
   font-size: 18px;
   text-underline-position: under;
+  line-height: 1.35;
 }
 
 .address__address-text {
   font-size: 18px;
+  line-height: 1.35;
 }
 
 .cover {
@@ -103,6 +106,8 @@ main {
   z-index: 1;
   display: flex;
   flex-direction: column;
+  width: 1000px;
+  height: 355px;
   color: white;
   font-size: 100px;
   font-weight: bold;
@@ -146,7 +151,7 @@ main {
   text-transform: uppercase;
   word-spacing: 18px;
   color: white;
-  margin: 135px 79px 62px 78px;
+  margin: 147px 79px 62px 78px;
   
  
 }
