--- a/styles/style.css
+++ b/styles/style.css
@@ -6,8 +6,9 @@ main {
 .header {
   display: grid;
   grid-template-columns: 1.5fr 2fr 1.5fr;
-  margin: 0px;
-  padding: 92px 24px 96px 24px;
+  margin: 92px 24px 96px 24px;
+  align-items: center;
+  justify-items: center;
 }
 
 .header__links-list {
@@ -28,6 +29,7 @@ main {
 .header__link {
   font-size: 18px;
   white-space: nowrap;
+  margin-left: 26.5px;
   
 }
 
@@ -38,7 +40,6 @@ main {
 .text-link:hover {
   background-color: black;
   color: white;
-
 }
 
 .header__link_active {
@@ -46,11 +47,10 @@ main {
 }
 
 .header__logo-image {
+  margin: 0px 184px 0px 36px;
   width: 140px;
   height: 148px;
   display: block;
-  margin-left: 36px;
-  margin-right: 184px;
 }
 
 .address__item {
@@ -67,7 +67,7 @@ main {
 
 .cover {
   position: relative;
-  width: 1100px;
+  width: 100%;
   min-height: 600px;
   padding: 165px 50px 51px 50px;
   background-image: url(../images/cover.jpg);
