--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@ main {
 
 .header {
   display: grid;
-  grid-template-columns: 1.5fr 2fr 1.5fr;
+  grid-template-columns: 1fr 1.25fr 1fr;
   margin: 92px 24px 96px 24px;
   align-items: center;
 }
@@ -28,7 +28,6 @@ main {
 
 .header__links-list-item_no-bullit {
   list-style: none;
-  line-height: 1.35;
 }
 
 .header__link {
@@ -51,8 +50,14 @@ main {
 
 .header__logo-image {
   width: 140px;
+  height: 105px;
   display: block;
+  margin-left: 4px;
 }
+
+.address {
+  padding-top: px;
+ }
 
 .address__item {
   display: block;
@@ -64,13 +69,14 @@ main {
 
 .address__address-text {
   font-size: 18px;
+  font-style: normal;
   line-height: 1.35;
 }
 
 .cover {
   position: relative;
   width: 100%;
-  min-height: 600px;
+  min-height: 757px;
   padding: 165px 50px 51px 50px;
   background-image: url(../images/cover.jpg);
   background-position: center;
@@ -100,7 +106,7 @@ main {
   font-weight: bold;
   letter-spacing: 30px;
   text-transform: uppercase;
-  line-height: 1.25;
+  line-height: 1.22;
 }
 
 .align-text {
@@ -110,10 +116,12 @@ main {
 
 .aligned-text_center {
   text-align: center;
+  line-height: 1.28;
 }
 
 .aligned-text_right {
   text-align: right;
+  line-height: 1.18;
 }
 .letter-spacing-extended {
   letter-spacing: 60px;
@@ -135,7 +143,7 @@ main {
   text-transform: uppercase;
   word-spacing: 18px;
   color: white;
-  margin: 132px 79px 0px 0px;
+  margin: 138px 80px 0px 0px;
 }
 
 .button {
@@ -148,12 +156,13 @@ main {
   text-transform: uppercase;
   background-color: transparent;
   color: white;
-  margin-top: 120px;
+  margin-top: 125px;
 }
 
 .lots {
   width: 1052px;
   margin: 0px 24px 146px 24px;
+  min-height: 563px;
 }
 
 .lots__heading {
@@ -224,6 +233,7 @@ main {
   font-size: 20px;
   margin: 0px 40px 48px 40px;
   color: white;
+  line-height: 1.22;
 }
 
 .lots__look-more-link {
@@ -286,14 +296,10 @@ main {
 
 .footer__menu-section {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1.25fr 1fr;
   width: 1000px;
   margin: 0px 50px 88px 50px;
   font-style: inherit;
-}
-
-.footer__address-maps {
-  font-style: normal;
 }
 
 .footer__menu-list {
@@ -307,7 +313,7 @@ main {
 
 .footer__social-list {
   display: flex;
-  align-items: start;
+  
   gap: 48px;
   justify-content: flex-end;
 }  
