--- a/styles/style.css
+++ b/styles/style.css
@@ -23,7 +23,7 @@ main {
 
 .header__links-list-item {
   list-style: circle;
-  line-height: 1.35;
+  line-height: 2;
 }
 
 .header__links-list-item_no-bullit {
@@ -52,19 +52,17 @@ main {
   width: 140px;
   height: 105px;
   display: block;
-  margin-left: 4px;
 }
 
 .address {
-  padding-top: px;
+  padding-top: 5px;
  }
 
 .address__item {
   display: block;
   font-size: 18px;
   text-underline-position: under;
-  line-height: 1.35;
-
+  line-height: 1.3;
 }
 
 .address__address-text {
@@ -77,12 +75,12 @@ main {
   position: relative;
   width: 100%;
   min-height: 757px;
-  padding: 165px 50px 51px 50px;
+  padding: 155px 50px 51px 50px;
   background-image: url(../images/cover.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  margin-bottom: 184px;
+  margin-bottom: 175px;
 }
 .overlay {
   position: absolute;
@@ -106,7 +104,6 @@ main {
   font-weight: bold;
   letter-spacing: 30px;
   text-transform: uppercase;
-  line-height: 1.22;
 }
 
 .align-text {
@@ -116,12 +113,12 @@ main {
 
 .aligned-text_center {
   text-align: center;
-  line-height: 1.28;
+  line-height: 1.4;
 }
 
 .aligned-text_right {
   text-align: right;
-  line-height: 1.18;
+  line-height: 1;
 }
 .letter-spacing-extended {
   letter-spacing: 60px;
@@ -143,7 +140,7 @@ main {
   text-transform: uppercase;
   word-spacing: 18px;
   color: white;
-  margin: 138px 80px 0px 0px;
+  padding: 148px 80px 0px 0px;
 }
 
 .button {
@@ -156,7 +153,7 @@ main {
   text-transform: uppercase;
   background-color: transparent;
   color: white;
-  margin-top: 125px;
+  margin-top: 135px;
 }
 
 .lots {
@@ -166,7 +163,7 @@ main {
 }
 
 .lots__heading {
-  margin: 0px 891px 0px 40px;
+  margin: 0px 891px 27px 40px;
   font-weight: bold;
   font-size: 40px;
   line-height: 1;
@@ -178,12 +175,12 @@ main {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 25px;
+  row-gap: 27px;
+
 }
 
 .lots__card-list-item {
   width: 334px;
-  margin-top: 27px;
-  margin-bottom: 30px;
 }
 
 .card-link {
@@ -238,7 +235,7 @@ main {
 
 .lots__look-more-link {
   display: block;
-  margin: 0px 820px 2px 40px;
+  margin: 29px 820px 2px 40px;
   font-size: 20px;
   text-decoration-line: underline;
   text-underline-position: under;
@@ -287,7 +284,7 @@ main {
 .about__text {
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 25px;
   font-size: 20px;
   line-height: normal;
   margin-top: 100px;
@@ -298,6 +295,7 @@ main {
   display: grid;
   grid-template-columns: 1fr 1.25fr 1fr;
   width: 1000px;
+  min-height: 98px;
   margin: 0px 50px 88px 50px;
   font-style: inherit;
 }
@@ -313,7 +311,6 @@ main {
 
 .footer__social-list {
   display: flex;
-  
   gap: 48px;
   justify-content: flex-end;
 }  
