--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@ main {
 .header {
   display: grid;
   grid-template-columns: 1fr 1.25fr 1fr;
-  margin: 88px 24px 96px 24px;
+  margin: 88px 24px 95px 24px;
   align-items: center;
 }
 
@@ -220,7 +220,9 @@ main {
   font-size: 22px;
   text-decoration: underline;
   text-transform: uppercase;
-  margin: 51px 40px 0px 40px;
+  text-underline-offset:4px;
+  text-decoration-thickness: 1px;
+  padding: 51px 40px 0px 40px;
   color: white;
 }
 
@@ -229,7 +231,7 @@ main {
   text-decoration: none;
   z-index: 1;
   font-size: 20px;
-  margin: 0px 40px 48px 40px;
+  padding: 0px 40px 48px 40px;
   color: white;
   line-height: 1.22;
 }
