--- a/styles/style.css
+++ b/styles/style.css
@@ -196,6 +196,7 @@ main {
   justify-content: space-between;
   width: 334px;
   min-height: 563px;
+  height: 100%;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
