--- a/styles/style.css
+++ b/styles/style.css
@@ -164,7 +164,7 @@ main {
 }
 
 .lots__heading {
-  margin: 0px 891px 35px 40px;
+  margin: 0px 0px 35px 40px;
   font-weight: bold;
   font-size: 40px;
   line-height: 1;
@@ -195,7 +195,6 @@ main {
   flex-direction: column;
   justify-content: space-between;
   width: 334px;
-  max-height: 563px;
   height: 100%;
   background-repeat: no-repeat;
   background-position: center;
@@ -220,7 +219,7 @@ main {
   font-size: 22px;
   text-decoration: underline;
   text-transform: uppercase;
-  text-underline-offset:4px;
+  text-underline-offset: 4px;
   text-decoration-thickness: 1px;
   padding: 51px 40px 0px 40px;
   color: white;
@@ -310,6 +309,10 @@ main {
   text-underline-position: under;
   list-style: none;
   font-size: 18px;
+}
+
+.footer__menu-link_active{
+text-decoration: none;
 }
 
 .footer__social-list {
