--- a/styles/style.css
+++ b/styles/style.css
@@ -191,6 +191,7 @@ main {
   flex-direction: column;
   justify-content: space-between;
   width: 334px;
+  min-height: 563;
   height: 100%;
   background-repeat: no-repeat;
   background-position: center;
