--- a/styles/style.css
+++ b/styles/style.css
@@ -195,7 +195,7 @@ main {
   flex-direction: column;
   justify-content: space-between;
   width: 334px;
-  height: auto;
+  height: 100%;
   min-height: 563px;
   background-repeat: no-repeat;
   background-position: center;
