--- a/styles/style.css
+++ b/styles/style.css
@@ -55,7 +55,7 @@ main {
 }
 
 .address {
-  padding-top: 4px;
+  padding-top: 5px;
   font-style: normal;
 }
 
@@ -164,7 +164,7 @@ main {
 }
 
 .lots__heading {
-  margin: 0px 0px 35px 40px;
+  margin: 0px 891px 35px 40px;
   font-weight: bold;
   font-size: 40px;
   line-height: 1;
@@ -195,8 +195,8 @@ main {
   flex-direction: column;
   justify-content: space-between;
   width: 334px;
+  max-height: 563px;
   height: 100%;
-  min-height: 563px;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -233,12 +233,12 @@ main {
   font-size: 20px;
   padding: 0px 40px 48px 40px;
   color: white;
-  line-height: 1.2Ы;
+  line-height: 1.22;
 }
 
 .lots__look-more-link {
   display: block;
-  margin: 29px 0px 2px 40px;
+  margin: 29px 820px 2px 40px;
   font-size: 20px;
   text-decoration-line: underline;
   text-decoration-thickness: 1px;
@@ -248,7 +248,7 @@ main {
 
 .about {
   display: grid;
-  grid-template-columns: 365px 1fr;
+  grid-template-columns: 359px 1fr;
   width: 1052px;
   margin: 0px 24px 178px 24px;
 }
@@ -278,7 +278,7 @@ main {
 }
 /*блок заголовка и текста*/
 .about__title {
-  margin: 140px 0px 13px 0px;
+  margin-top: 140px;
   font-weight: bold;
   font-size: 40px;
   line-height: 1;
@@ -310,10 +310,6 @@ main {
   text-underline-position: under;
   list-style: none;
   font-size: 18px;
-}
-
-.footer__menu-link_active {
-  text-decoration: none;
 }
 
 .footer__social-list {
