--- a/styles/style.css
+++ b/styles/style.css
@@ -164,7 +164,7 @@ main {
 }
 
 .lots__heading {
-  margin: 2px 0px 34px 40px;
+  padding: 2px 0px 34px 40px;
   font-weight: bold;
   font-size: 40px;
   line-height: 1;
