--- a/styles/style.css
+++ b/styles/style.css
@@ -19,6 +19,8 @@ main {
   display: flex;
   gap: 32px;
   padding: 44px 37px 39px 25px;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 4px;
 }
 
 .header__links-list-item {
@@ -142,7 +144,7 @@ main {
   text-transform: uppercase;
   word-spacing: 18px;
   color: white;
-  padding: 148px 80px 0px 0px;
+  padding: 147px 80px 0px 1px;
 }
 
 .button {
@@ -155,7 +157,7 @@ main {
   text-transform: uppercase;
   background-color: transparent;
   color: white;
-  margin-top: 135px;
+  margin-top: 134px;
 }
 
 .lots {
